--- a/index.html
+++ b/index.html
@@ -16,19 +16,35 @@
 			 * This function initializes the app
 			 */
 			amcTechnologydavinciApi.initializeComplete(logger).then(function (config) {
-				amcTechnologydavinciApi.setAppHeight(40);
+				amcTechnologydavinciApi.setAppHeight(30);
 			});
 
 			/*
-			 * This example function triggers a screenpop from Dynamics after an interval of 60 seconds.
+			 * This example function triggers a blindTransfer of an ongoing call.
+			 */
+			function onBlindTransfer(){
+				numberToDial = '12223331111' //phone number of this format.
+				const action = amcTechnologydavinciApi.CONTEXTUAL_OPERATION_TYPE.BlindTransfer;
+        			const interactionID = '515.00225005151643330365'; //This must be the current interactionID of the ongoing call.
+        			amcTechnologydavinciApi.clickToDial(
+          				numberToDial,
+          				null,
+          				null,
+          				action,
+          				interactionID
+        		);
+			}
+
+			/*
+			 * This example function triggers a screenpop from Dynamics.
 			 */
 			
 			function onScreenpop(){
 				amcTechnologydavinciApi.screenpop(
-            	amcTechnologydavinciApi.CHANNEL_TYPES.Telephony,
-            	amcTechnologydavinciApi.INTERACTION_DIRECTION_TYPES.Inbound,
-            	"f485e06f-755f-ec11-8f8f-0022483005b6",
-            	"account");
+            			amcTechnologydavinciApi.CHANNEL_TYPES.Telephony,
+            			amcTechnologydavinciApi.INTERACTION_DIRECTION_TYPES.Inbound,
+            			"f485e06f-755f-ec11-8f8f-0022483005b6",
+            			"account");
 			 }
 	
 		</script>
@@ -38,8 +54,8 @@
         <div>
              <p> Sample DaVinci App</p> 
         </div>
-
 		<button type="button" class="button" onclick="onScreenpop()">ScreenPop</button>
+		<button type="button" class="button" onclick="onBlindTransfer()">BlindTransfer</button>
     </body>
 	<style>
 		.button {
